Use API v1 payment routes
